{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 64,
  "lineage": "5b37307c-bf9b-a912-823d-4bda60c5a9d9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "linux-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0483ceac9acd9337d",
            "association_id": "eipassoc-044e5eecea46eac9e",
            "domain": "vpc",
            "id": "eipalloc-0483ceac9acd9337d",
            "instance": "i-059a2efcd5a5a2faa",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-07b9ff479805767d7",
            "private_dns": "ip-10-11-1-98.eu-west-1.compute.internal",
            "private_ip": "10.11.1.98",
            "public_dns": "ec2-54-77-29-41.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.77.29.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "task1-dev-linux-eip 0"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "task1-dev-linux-eip 0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.linux-server",
            "aws_key_pair.key_pair",
            "aws_security_group.aws-linux-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_ami.centos-8",
            "tls_private_key.key_pair"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d37ad578ad708a2",
            "association_id": "eipassoc-05b6cdbdee2b44320",
            "domain": "vpc",
            "id": "eipalloc-04d37ad578ad708a2",
            "instance": "i-0249eab64597c4dc2",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-084adcc87684ec334",
            "private_dns": "ip-10-11-1-56.eu-west-1.compute.internal",
            "private_ip": "10.11.1.56",
            "public_dns": "ec2-108-128-135-169.eu-west-1.compute.amazonaws.com",
            "public_ip": "108.128.135.169",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "task1-dev-linux-eip 1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "task1-dev-linux-eip 1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.linux-server",
            "aws_key_pair.key_pair",
            "aws_security_group.aws-linux-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_ami.centos-8",
            "tls_private_key.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e0669c0b39d3a79f",
            "arn": "arn:aws:ec2:eu-west-1:881964879253:instance/i-059a2efcd5a5a2faa",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdb",
                "encrypted": true,
                "iops": 0,
                "kms_key_id": "arn:aws:kms:eu-west-1:881964879253:key/dc167ed5-6788-4ce9-ad7c-f0338111d622",
                "tags": {
                  "Name": "/data1"
                },
                "throughput": 0,
                "volume_id": "vol-076d313ee5c94da9b",
                "volume_size": 1,
                "volume_type": "standard"
              },
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdc",
                "encrypted": true,
                "iops": 0,
                "kms_key_id": "arn:aws:kms:eu-west-1:881964879253:key/dc167ed5-6788-4ce9-ad7c-f0338111d622",
                "tags": {
                  "Name": "/data2"
                },
                "throughput": 0,
                "volume_id": "vol-0b0b5414e0fa86557",
                "volume_size": 1,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-059a2efcd5a5a2faa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task1-dev-linux-eu-west-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07b9ff479805767d7",
            "private_dns": "ip-10-11-1-98.eu-west-1.compute.internal",
            "private_ip": "10.11.1.98",
            "public_dns": "ec2-54-78-69-171.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.78.69.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-west-1:881964879253:key/dc167ed5-6788-4ce9-ad7c-f0338111d622",
                "throughput": 0,
                "volume_id": "vol-0bee3169954f93e9e",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-009dc23dccbcf1d19",
            "tags": {
              "Inventory": "dev",
              "Name": "linux-server 0"
            },
            "tags_all": {
              "Inventory": "dev",
              "Name": "linux-server 0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00cdff0fffa68aa38"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.aws-linux-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_ami.centos-8",
            "tls_private_key.key_pair"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e0669c0b39d3a79f",
            "arn": "arn:aws:ec2:eu-west-1:881964879253:instance/i-0249eab64597c4dc2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdb",
                "encrypted": true,
                "iops": 0,
                "kms_key_id": "arn:aws:kms:eu-west-1:881964879253:key/dc167ed5-6788-4ce9-ad7c-f0338111d622",
                "tags": {
                  "Name": "/data1"
                },
                "throughput": 0,
                "volume_id": "vol-010248673fabac9de",
                "volume_size": 1,
                "volume_type": "standard"
              },
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdc",
                "encrypted": true,
                "iops": 0,
                "kms_key_id": "arn:aws:kms:eu-west-1:881964879253:key/dc167ed5-6788-4ce9-ad7c-f0338111d622",
                "tags": {
                  "Name": "/data2"
                },
                "throughput": 0,
                "volume_id": "vol-0d78823747d033e55",
                "volume_size": 1,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0249eab64597c4dc2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task1-dev-linux-eu-west-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-084adcc87684ec334",
            "private_dns": "ip-10-11-1-56.eu-west-1.compute.internal",
            "private_ip": "10.11.1.56",
            "public_dns": "ec2-54-74-45-134.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.74.45.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-west-1:881964879253:key/dc167ed5-6788-4ce9-ad7c-f0338111d622",
                "throughput": 0,
                "volume_id": "vol-07079f829928b547b",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-009dc23dccbcf1d19",
            "tags": {
              "Inventory": "dev",
              "Name": "linux-server 1"
            },
            "tags_all": {
              "Inventory": "dev",
              "Name": "linux-server 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00cdff0fffa68aa38"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.aws-linux-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_ami.centos-8",
            "tls_private_key.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:881964879253:internet-gateway/igw-0b1d16c8156999596",
            "id": "igw-0b1d16c8156999596",
            "owner_id": "881964879253",
            "tags": {
              "Environment": "dev",
              "Name": "task1-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "task1-dev-igw"
            },
            "vpc_id": "vpc-03c6721c2d87b072e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:881964879253:route-table/rtb-01c31ac6b233fd3c9",
            "id": "rtb-01c31ac6b233fd3c9",
            "owner_id": "881964879253",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b1d16c8156999596",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "task1-dev-public-subnet-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "task1-dev-public-subnet-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c6721c2d87b072e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0326074abb02878c4",
            "route_table_id": "rtb-01c31ac6b233fd3c9",
            "subnet_id": "subnet-009dc23dccbcf1d19"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-linux-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:881964879253:security-group/sg-00cdff0fffa68aa38",
            "description": "Allow incoming HTTP connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outgoing connections out of the instance",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00cdff0fffa68aa38",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming SSH connections",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "task1-dev-linux-sg",
            "name_prefix": "",
            "owner_id": "881964879253",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "task1-dev-linux-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "task1-dev-linux-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c6721c2d87b072e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:881964879253:subnet/subnet-009dc23dccbcf1d19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.11.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009dc23dccbcf1d19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881964879253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "task1-dev-public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "task1-dev-public-subnet"
            },
            "vpc_id": "vpc-03c6721c2d87b072e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:881964879253:vpc/vpc-03c6721c2d87b072e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-0405f2e0ab792c46d",
            "default_route_table_id": "rtb-0d4381b977972e3ef",
            "default_security_group_id": "sg-05847300c9277cabb",
            "dhcp_options_id": "dopt-0cbac607347b20ee5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03c6721c2d87b072e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4381b977972e3ef",
            "owner_id": "881964879253",
            "tags": {
              "Environment": "dev",
              "Name": "task1-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "task1-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}